--- a/main.css
+++ b/main.css
@@ -134,6 +134,10 @@ button{
 .p-c-i2{
     margin: 2vw 0 0 2vw;
 }
+.v-c-t{
+    font-size: 20px;
+    margin: 20px 0 0 2vw;
+}
 .yunus-speech{
     background: url("quote-bg.png") no-repeat;
     background-position: 5px 5px;
