--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ button{
 .v-c-p{
     color: gray;
     margin: 0px 2vw 0 2vw;
-    font-size: 16px;
+    font-size: 17px;
 }
 .v-c-a1{
     height: 15vw;
@@ -208,4 +208,9 @@ button{
     font-size: 17px;
     margin: 0px 20px 0 20px;
     color: gray;
+}
+.news{
+    width: 80vw;
+    border: 1px solid black;
+    margin: 0 0 0 10vw;
 }
